saya manusia biasa

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <h1>ini punyaku</h1>
     <p>umar faruq manek</p>
     <p>saya telah membajak branch umar</p>
+
+    <p>saya manusia biasa</p>
   </body>
 </html>
